Accessibility layout fixes

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -167,7 +167,7 @@ block body
         a(name='contact')
         .container
             .row
-                .col-md-4
+                .col-md-3
                     p
                         b INFO
                     p
@@ -177,7 +177,7 @@ block body
                         a(href="https://groups.google.com/d/forum/open-access-button-general")
                             | Join the community
                     p Disclaimer
-                .col-md-4
+                .col-md-3
                     p
                         b ABOUT
                     p
@@ -189,16 +189,17 @@ block body
                     p
                         a(href="oabutton+data@gmail.com")
                             | Get the data
-                .col-md-4
+                .col-md-6
                     p
                         a.icon.twitter(href="https://twitter.com/oa_button") Twitter
                         a.icon.facebook(href="https://www.facebook.com/openaccess.net") Facebook
                         a.icon.wordpress(href="http://oabutton.wordpress.com/") Wordpress
 
-                    p
+                    p.license
                         a(rel="license", href="http://creativecommons.org/licenses/by/3.0/")
                             img(alt="Creative Commons License", style="border-width:0", src="http://i.creativecommons.org/l/by/3.0/88x31.png")
-                        | &nbsp;The 
+                        br
+                        | The 
                         span(xmlns:dct="http://purl.org/dc/terms/", property="dct:title") Open Access Button 
                         | is licensed under a 
                         a(rel="license", href="http://creativecommons.org/licenses/by/3.0/") Creative Commons Attribution 3.0 Unported License
