dropped use of less.js

--- a/oabutton/static/public/less/styles.less
+++ b/oabutton/static/public/less/styles.less
@@ -1,3 +1,4 @@
+/* Don't edit this CSS file.  It's generated using lessc */
 @import "../css/MarkerCluster.css";
 @import "../css/MarkerCluster.Default.css";
 
