--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -16,12 +16,7 @@ html(lang='en')
     //- link(rel='stylesheet', href='/css/font-awesome.min.css')
     script(src='//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js')
 
-    link(rel='stylesheet/less', type='text/css', media='all', href='/static/less/styles.less')
-    script(src='/static/js/lib/less-1.4.2.min.js')
-    {% load compress %}
-    {% compress css %}
-    link(rel='stylesheet/less', type='text/css', media='all', href='/static/less/styles.less')
-    {% endcompress %}
+    link(rel='stylesheet', type='text/css', media='all', href='/static/css/styles.css')
         
     //if lt IE 9
       script(src='/static/js/lib/html5shiv.js')
