--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -42,7 +42,7 @@ Tell us why and we'll put you on the map.
     {{ bookmarklet.story|label_with_classes:"control-label" }}
     {{ bookmarklet.story }}
   </div>
-  <div class="control-group">
+  <div class="control-group" style="margin-top: 1em;">
     <div class="controls">
       <button class="btn btn-primary">Submit</button>
     </div>
