cleaned up syntax for bootstrap'ified bookmarklet base template

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -15,12 +15,17 @@
     <div id="fb-root"></div>
     <!-- Main body-->
     <div class="container">
-
-        <img id="bookmarklet-logo" src="/static/img/oabutton_logo.png" />
-        <img id="bookmarklet-badge" src="/static/img/oabutton_badge.png" />
-        <a id="id_pmc" title="Available at PMC" target="_new" style="position: absolute; top: 0; right: 32px; display: none;"><img src="/static/img/pmc.png"/></a>
-        {% block content %}
-        {% endblock %}
+        <div class="row">
+            <div class="col-md-3 col-md-offset-4">
+                <div class="account-box">
+                    <div class="logo ">
+                        <img id="bookmarklet-logo" src="/static/img/oabutton_logo.png" alt="Open Access Logo" />
+                    </div>
+                {% block content %}
+                {% endblock %}
+                </div>
+            </div>
+        </div>
     </div>
 
     {% block footer %}
