--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -49,11 +49,16 @@ Tell us why and we'll put you on the map.
     {{ bookmarklet.story|label_with_classes:"control-label" }}
     {{ bookmarklet.story }}
   </div>
-  <div class="control-group">
-    <div class="controls">
-      <button class="btn btn-primary">Submit</button>
-    </div>
+  <div class="or-box row-block">
+      <div class="row">
+          <div class="col-md-12 row-block">
+              <button class="btn btn-primary btn-block">Submit</button>
+          </div>
+      </div>
   </div>
+
+
+
 </form>
 
 
