added pull-left and pull-right for report a bug and donate links in bookmarklet footer

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -31,11 +31,17 @@
 
     {% block footer %}
     <div class="container bookmarklet-footer">
-        <p>
-            For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a>
-        </p>
-        <a href="mailto:oabutton+bugs@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
-        <a href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton">Donate</a>
+        <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a></p>
+        <div class="or-box row-block">
+            <div class="row">
+                <div class="pull-left">
+                    <a href="mailto:oabutton+bugs@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
+                </div>
+                <div class="pull-right">
+                    <a href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton">Donate</a>
+                </div>
+            </div>
+        </div>
     </div>
     {% endblock %}
 
