--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -9,7 +9,7 @@
   {{ bookmarklet.accessed }}
   {{ bookmarklet.user_id }}
 
-  <div class="control-group">
+  <div class="control-group raleway-font">
       <p>You've hit a paywall!?</p>
       <p>That sucks.</p>
       <p>Tell us why and we'll put you on the map.</p>
