--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -32,12 +32,14 @@
 
     {% block footer %}
     <div class="container bookmarklet-footer">
-        <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a></p>
-        <div>
-            <a class="pull-left" href="mailto:oabutton+bugs@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
-        </div>
-        <div>
-            <a class="pull-right" href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton">Donate</a>
+        <div class="row">
+            <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a></p>
+            <div>
+                <a class="pull-left" href="mailto:oabutton+bugs@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
+            </div>
+            <div>
+                <a class="pull-right" href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton">Donate</a>
+            </div>
         </div>
     </div>
     {% endblock %}
