changed most visible fonts to Railway

--- a/oabutton/static/public/css/app.css
+++ b/oabutton/static/public/css/app.css
@@ -7,6 +7,9 @@ IMG#bookmarklet-badge {
 }
 
 .bookmarklet-footer {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 10px;
     background: "grey";
     font-family: "Raleway";
 }
