minor style fixes to bookmarklet for font consistency using Raleway

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -32,13 +32,15 @@
 
     {% block footer %}
     <div class="container bookmarklet-footer">
+        <hr />
+        <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a></p>
+        <hr />
         <div class="row">
-            <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a></p>
             <div>
                 <a class="pull-left" href="mailto:oabutton+bugs@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
             </div>
             <div>
-                <a class="pull-right" href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton">Donate</a>
+                <a class="pull-right" href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton" target="_blank">Donate</a>
             </div>
         </div>
     </div>
