--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -48,7 +48,7 @@
     {{ bookmarklet.story|label_with_classes:"control-label" }}
     {{ bookmarklet.story }}
   </div>
-  <div class="or-box row-block">
+  <div class="row-block">
       <div class="row">
           <div class="col-md-12 row-block">
               <button class="btn btn-primary btn-block">Submit</button>
