--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
@@ -1,4 +1,5 @@
 {% extends "bookmarklet/layout.html" %}{% block content %}
+<div class="raleway-font">
 <h2>Thanks!</h2>
 <p>Below are a number of ways to get access to your paper, unfortunately
 they won't always work but it's worth a shot.
@@ -6,17 +7,9 @@ they won't always work but it's worth a shot.
 <!-- Email link goes here -->
 <ul id="oa_links">
 </ul>
+</div>
 {% endblock %}
 {% block scripts %}
 <script src="/static/js/success.js"></script>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=570391483000074";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 {% endblock %}
 {% block body_attrs %}data-doi="{{doi|urlencode}}"{% endblock %}
