changed Search Google into anchors that look like buttons

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
@@ -15,10 +15,15 @@
         </div>
     </div>
 
-    <div id="oa_links">
+    <div>
         <h4>Searching for related documents</h4>
     </div>
-</div>
+    <div class="row-block">
+        <div class="row">
+            <div id="oa_links" class="col-md-12 row-block">
+            </div>
+        </div>
+    </div>
 {% endblock %}
 {% block scripts %}
 <script src="/static/js/success.js"></script>
