--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
@@ -5,25 +5,41 @@
     they won't always work but it's worth a shot.
     </p>
 
-    <a href=""></a>
+
     <div class="row-block">
         <div class="row">
-            <div class="col-md-12 row-block">
-                Email a request for the paper directly to the author:
-                <button class="btn btn-primary btn-block">Ask [addres@goes.here]</button>
+            <div id="google_links" class="col-md-12 row-block">
             </div>
         </div>
     </div>
 
+    <hr />
+    <div id="email-request" class="row-block">
+        <h4>Email a request for the paper directly to the author</h4>
+        <div class="row">
+            <div class="col-md-12 row-block">
+                <button class="btn btn-primary btn-block">Ask [addres@goes.here]</button>
+            </div>
+        </div>
+    </div>
+    <hr />
     <div>
         <h4>Searching for related documents</h4>
     </div>
     <div class="row-block">
         <div class="row">
-            <div id="oa_links" class="col-md-12 row-block">
+            <div id="core_links" class="col-md-12 row-block">
             </div>
         </div>
     </div>
+
+    <div class="row-block">
+        <div class="row">
+            <div id="pmc_links" class="col-md-12 row-block">
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 {% block scripts %}
 <script src="/static/js/success.js"></script>
