--- a/oabutton/static/public/css/app.css
+++ b/oabutton/static/public/css/app.css
@@ -28,7 +28,11 @@ IMG#bookmarklet-badge {
     display: inline-block; padding: 2px 8px;
 }
 
+#email-request {
+    margin-top: 10px;
+}
+
 #core_results {
     margin-top: 10px;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
