updated copy on bookmarklet start

--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -45,6 +45,6 @@ block start
                         | Thanks for signing up!
                 .modal-body
                     p
-                        | Instructions for enabling the browser bar, cute little animation, etc.
+                        | Thanks for signing up, don't forget to check you inbox for a verification email! If you don't have a bookmark bar (we're looking at you chrome users) find instructions for activating one here. For a 2 minute walk through on using the button (don't worry it's simple) watch this video.
                 .modal-footer
                     button.btn.btn-default(type="button", data-dismiss="modal") OK
